--- a/index.html
+++ b/index.html
@@ -15,13 +15,11 @@
     <link href="vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet">
 
     <!-- Custom Fonts -->
-    <link href="https://fonts.googleapis.com/css?family=Dancing+Script|Mr+Dafoe|Ruthie|Tangerine" rel="stylesheet">
-    <link href="https://fonts.googleapis.com/css?family=Bigshot+One|Maiden+Orange|Overlock+SC|Passion+One|Patua+One|Rakkas" rel="stylesheet">
-    <link href="https://fonts.googleapis.com/css?family=Andada|Bigshot+One|Bitter|Karma|Maiden+Orange|Maitree|Overlock+SC|Passion+One|Patua+One|Rakkas|Roboto+Slab|Scope+One|Tinos|Vollkorn" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css?family=Dancing+Script" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css?family=Passion+One" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css?family=Karma" rel="stylesheet">
     <link href="vendor/font-awesome/css/font-awesome.min.css" rel="stylesheet" type="text/css">
-    <link href="https://fonts.googleapis.com/css?family=Lora:400,700,400italic,700italic" rel="stylesheet" type="text/css">
-    <link href="https://fonts.googleapis.com/css?family=Montserrat:400,700" rel="stylesheet" type="text/css">
-
+    
     <!-- Theme CSS -->
     <link href="css/grayscale.min.css" rel="stylesheet">
 
