--- a/index.html
+++ b/index.html
@@ -15,9 +15,9 @@
     <link href="vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet">
 
     <!-- Custom Fonts -->
-    <link href="https://fonts.googleapis.com/css?family=Dancing+Script" rel="stylesheet">
-    <link href="https://fonts.googleapis.com/css?family=Passion+One" rel="stylesheet">
-    <link href="https://fonts.googleapis.com/css?family=Karma" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css?family=Mr+Dafoe|Ruthie|Tangerine" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css?family=Bigshot+One|Maiden+Orange|Overlock+SC|Patua+One|Rakkas" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css?family=Andada|Bitter|Maitree|Roboto+Slab|Scope+One|Tinos|Vollkorn" rel="stylesheet">
     
     <!-- Theme CSS -->
     <link href="css/grayscale.css" rel="stylesheet">
