--- a/index.html
+++ b/index.html
@@ -96,7 +96,7 @@
     <section id="about" class="container content-section text-center">
         <div class="row">
             <div class="col-lg-8 col-lg-offset-2">
-                <h2>About Miss Mikey May</h2>
+                <h2>About</h2>
                 <p>My life in blues.</p>
             </div>
         </div>
@@ -111,7 +111,7 @@
                     <p>In October 2016, Miss Mikey May released her debut album, 'Swing Out the Blues', a collaborative project with Jan Korinek.
                     The album also gave birth to her primary project The Organ Grinders, and features Swung-up tributes to classic Blues tunes.</p>
                     <a href="https://missmikeymay.bandcamp.com/" class="btn btn-default btn-lg">Hear, like, and buy the album on Bandcamp</a>
-                    <iframe style="border: 0; width: 700px; height: 472px;" src="https://bandcamp.com/EmbeddedPlayer/album=2572896376/size=large/bgcol=333333/linkcol=e99708/artwork=small/transparent=true/" seamless><a href="http://missmikeymay.bandcamp.com/album/swing-out-the-blues">Swing Out the Blues by Miss Mikey May and Jan Kořínek with The Organ Grinders</a></iframe>
+                    <iframe style="border: 0; width: 500px; height: 472px;" src="https://bandcamp.com/EmbeddedPlayer/album=2572896376/size=large/bgcol=333333/linkcol=e99708/artwork=small/transparent=true/" seamless><a href="http://missmikeymay.bandcamp.com/album/swing-out-the-blues">Swing Out the Blues by Miss Mikey May and Jan Kořínek with The Organ Grinders</a></iframe>
                 </div>
             </div>
         </div>
@@ -123,7 +123,7 @@
             <div class="col-lg-8 col-lg-offset-2">
                 <h2>Videos</h2>
                 <iframe width="560" height="315" src="https://www.youtube.com/embed/FmL9Cf9Zbs4?rel=0" frameborder="0" allowfullscreen></iframe>
-                <br>
+                <p> </p>
                 <iframe width="560" height="315" src="https://www.youtube.com/embed/LQBcaGpyKlI?rel=0" frameborder="0" allowfullscreen></iframe>
             </div>
         </div>
