--- a/index.html
+++ b/index.html
@@ -116,10 +116,9 @@
         <div class="music-section">
             <div class="container">
                 <div class="col-lg-8 col-lg-offset-2">
-                    <h2>The Music</h2>
-                    <p>In October 2016, Miss Mikey May released her debut album, 'Swing Out the Blues', a collaborative project with Jan Korinek.
-                    The album also gave birth to her primary project The Organ Grinders, and features Swung-up tributes to classic Blues tunes.</p>
-                    <a href="https://missmikeymay.bandcamp.com/" class="btn btn-default btn-lg">Hear, like, and buy the album on Bandcamp</a>
+                    <h2>Music</h2>
+                    <a href="https://missmikeymay.bandcamp.com/" class="btn btn-default btn-lg">Buy the album on Bandcamp</a>
+                    <p>   </p>
                     <iframe style="border: 0; width: 500px; height: 472px;" src="https://bandcamp.com/EmbeddedPlayer/album=2572896376/size=large/bgcol=333333/linkcol=e99708/artwork=small/transparent=true/" seamless><a href="http://missmikeymay.bandcamp.com/album/swing-out-the-blues">Swing Out the Blues by Miss Mikey May and Jan Kořínek with The Organ Grinders</a></iframe>
                 </div>
             </div>
