--- a/index.html
+++ b/index.html
@@ -56,13 +56,13 @@
                         <a class="page-scroll" href="#about">About</a>
                     </li>
                     <li>
-                        <a class="page-scroll" href="#download">Music</a>
+                        <a class="page-scroll" href="#music">Music</a>
                     </li>
                     <li>
-                        <a class="page-scroll" href="#download">Videos</a>
+                        <a class="page-scroll" href="#videos">Videos</a>
                     </li>
                     <li>
-                        <a class="page-scroll" href="#download">Shows</a>
+                        <a class="page-scroll" href="#shows">Shows</a>
                     </li>
                     <li>
                         <a class="page-scroll" href="#contact">Contact</a>
