--- a/index.html
+++ b/index.html
@@ -113,8 +113,8 @@
 
     <!-- Bandcamp Section -->
     <section id="music" class="content-section text-center">
-        <div class="music-section">
-            <div class="container">
+        <div class="widget-section">
+            <div class="video-container">
                 <div class="col-lg-8 col-lg-offset-2">
                     <h2>Music</h2>
                     <a href="https://missmikeymay.bandcamp.com/" class="btn btn-default btn-lg">Buy the album on Bandcamp</a>
@@ -126,8 +126,8 @@
     </section>
 
     <!-- YouTube Section -->
-    <section id="videos" class="container content-section text-center">
-        <div class="row">
+    <section id="videos" class="video-container widget-section text-center">
+        <div class="video-container">
             <div class="col-lg-8 col-lg-offset-2">
                 <h2>Videos</h2>
                 <iframe width="350" height="197" src="https://www.youtube.com/embed/FmL9Cf9Zbs4?rel=0" frameborder="0" allowfullscreen></iframe>
@@ -138,9 +138,9 @@
     </section>
 
     <!-- Events Section -->
-    <section id="shows" class="content-section text-center">
-        <div class="shows-section">
-            <div class="container">
+    <section id="shows" class="widget-section text-center">
+        <div class="widget-section">
+            <div class="video-container">
                 <div class="col-lg-8 col-lg-offset-2">
                     <h2>Upcoming Shows</h2>
                     <iframe src="https://www.facebook.com/plugins/page.php?href=https%3A%2F%2Fwww.facebook.com%2FMissMikeyMaySings%2F&tabs=events&width=350&height=500&small_header=true&adapt_container_width=true&hide_cover=false&show_facepile=false&appId" width="350" height="500" style="border:none;overflow:hidden" scrolling="no" frameborder="0" allowTransparency="true"></iframe>
