--- a/index.html
+++ b/index.html
@@ -114,7 +114,7 @@
     <!-- Bandcamp Section -->
     <section id="music" class="content-section text-center">
         <div class="widget-section">
-            <div class="video-container">
+            <div class="container">
                 <div class="col-lg-8 col-lg-offset-2">
                     <h2>Music</h2>
                     <a href="https://missmikeymay.bandcamp.com/" class="btn btn-default btn-lg">Buy the album on Bandcamp</a>
