--- a/index.html
+++ b/index.html
@@ -127,7 +127,7 @@
 
     <!-- YouTube Section -->
     <section id="videos" class="video-container widget-section text-center">
-        <div class="video-container">
+        <div class="container">
             <div class="col-lg-8 col-lg-offset-2">
                 <h2>Videos</h2>
                 <iframe width="350" height="197" src="https://www.youtube.com/embed/FmL9Cf9Zbs4?rel=0" frameborder="0" allowfullscreen></iframe>
@@ -140,7 +140,7 @@
     <!-- Events Section -->
     <section id="shows" class="widget-section text-center">
         <div class="widget-section">
-            <div class="video-container">
+            <div class="container">
                 <div class="col-lg-8 col-lg-offset-2">
                     <h2>Upcoming Shows</h2>
                     <iframe src="https://www.facebook.com/plugins/page.php?href=https%3A%2F%2Fwww.facebook.com%2FMissMikeyMaySings%2F&tabs=events&width=350&height=500&small_header=true&adapt_container_width=true&hide_cover=false&show_facepile=false&appId" width="350" height="500" style="border:none;overflow:hidden" scrolling="no" frameborder="0" allowTransparency="true"></iframe>
