--- a/index.html
+++ b/index.html
@@ -126,7 +126,7 @@
     </section>
 
     <!-- YouTube Section -->
-    <section id="videos" class="video-container widget-section text-center">
+    <section id="videos" class="container widget-section text-center">
         <div class="container">
             <div class="col-lg-8 col-lg-offset-2">
                 <h2>Videos</h2>
