--- a/index.html
+++ b/index.html
@@ -113,7 +113,7 @@
 
     <!-- Bandcamp Section -->
     <section id="music" class="content-section text-center">
-        <div class="widget-section">
+        <div class="content-section">
             <div class="container">
                 <div class="col-lg-8 col-lg-offset-2">
                     <h2>Music</h2>
@@ -126,7 +126,7 @@
     </section>
 
     <!-- YouTube Section -->
-    <section id="videos" class="container widget-section text-center">
+    <section id="videos" class="container content-section text-center">
         <div class="container">
             <div class="col-lg-8 col-lg-offset-2">
                 <h2>Videos</h2>
@@ -138,7 +138,7 @@
     </section>
 
     <!-- Events Section -->
-    <section id="shows" class="widget-section text-center">
+    <section id="shows" class="content-section text-center">
         <div class="widget-section">
             <div class="container">
                 <div class="col-lg-8 col-lg-offset-2">
