--- a/index.html
+++ b/index.html
@@ -130,7 +130,7 @@
         <div class="container">
             <div class="col-lg-8 col-lg-offset-2">
                 <h2>Videos</h2>
-                <iframe width="350" height="197" src="https://www.youtube.com/embed/FmL9Cf9Zbs4?rel=0" frameborder="0" allowfullscreen></iframe>
+                <div class="video-container"><iframe width="350" height="197" src="https://www.youtube.com/embed/FmL9Cf9Zbs4?rel=0" frameborder="0" allowfullscreen></iframe></div>
                 <p> </p>
                 <iframe width="350" height="197" src="https://www.youtube.com/embed/LQBcaGpyKlI?rel=0" frameborder="0" allowfullscreen></iframe>
             </div>
@@ -139,7 +139,7 @@
 
     <!-- Events Section -->
     <section id="shows" class="content-section text-center">
-        <div class="widget-section">
+        <div class="content-section">
             <div class="container">
                 <div class="col-lg-8 col-lg-offset-2">
                     <h2>Upcoming Shows</h2>
