--- a/index.html
+++ b/index.html
@@ -130,9 +130,9 @@
         <div class="container">
             <div class="col-lg-8 col-lg-offset-2">
                 <h2>Videos</h2>
-                <div class="video-container"><iframe width="350" height="197" src="https://www.youtube.com/embed/FmL9Cf9Zbs4?rel=0" frameborder="0" allowfullscreen></iframe></div>
+                <div class="video-container"><iframe width="560" height="315" src="https://www.youtube.com/embed/FmL9Cf9Zbs4?rel=0" frameborder="1" allowfullscreen></iframe></div>
                 <p> </p>
-                <iframe width="350" height="197" src="https://www.youtube.com/embed/LQBcaGpyKlI?rel=0" frameborder="0" allowfullscreen></iframe>
+                <div class="video-container"><iframe width="560" height="315" src="https://www.youtube.com/embed/LQBcaGpyKlI?rel=0" frameborder="1" allowfullscreen></iframe></div>
             </div>
         </div>
     </section>
