--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
                     Menu <i class="fa fa-bars"></i>
                 </button>
                 <a class="navbar-brand page-scroll" href="#page-top">
-                    <i class="fa fa-play-circle"></i> <span class="light">Miss</span> Mikey</span> May
+                    <i class="fa fa-play-circle"></i> <span class="light"><b>Miss Mikey May</b></span>
                 </a>
             </div>
 
@@ -98,13 +98,9 @@
             <div class="col-lg-8 col-lg-offset-2">
                 <h2>About</h2>
                 <p>Miss Mikey May is an Israeli-American blues and jazz singer, based in Prague, Czech Republic. Her powerful and soulful vocals are inspired by the great jazz and blues divas and deliver a one-two punch of musicality and emotion that radiates on and off the stage.</p>
-                <p>Mikey started her artistic journey in her childhood, singing, acting, and dancing in school productions. She also trained on classical piano, acoustic guitar, and jazz bass guitar. In her teens Mikey moved with her family to California, where she majored in music and theatre in high school, singing and playing in jazz and rock bands. </p>
-<p>After returning to Israel, Mikey spent the better part of her twenties singing and playing bass for rock and blues bands in Tel Aviv, as well as performing in Cabaret, fringe, and burlesque productions. She contributed bass and vocals to albums from singer-songwriters Shir Deutch and Avsha Elan. </p>
-<p>In 2012 Mikey discovered the world of social dancing embodied in Lindy Hop, an African-American partnered dance with vernacular jazz dance origins that was developed in the 1930's in Harlem, NYC, and the best part - it's danced to swing music!</p>
-<p>While training in this dance, and subsequently expanding to Blues partnered dancing as well (danced to blues music!), Mikey immersed herself in traditional golden-age swing and blues music, and absorbed from the dance floor old vintage records as well as new bands performing the classic songs.</p>
-<p>In November 2015 Mikey moved to Prague, the capital of Czech Republic and the jazz and blues capital of Central Europe. The local music community welcomed her with open arms, and she's since been established as a local vocalist in many groups and venues in the city.</p>
-<p>Together with Jan Korinek, long-time Hammond organ player and band leader, Mikey founded The Organ Grinders, a project focused on bridging the gaps between jazz and blues music, and on delivering dancer-friendly tributes of the songs that Mikey got to know and love as a dancer.</p>
-<p>In October 2016, Mikey released her debut album, 'Swing Out the Blues', co-produced and arranged by Jan Korinek, featuring swung-up tributes to classic blues tunes and bluesed-up tributes to old fashioned swing tunes. The album was recorded and released under the label Blacktown Records.</p>
+                <p>Mikey grew up on the stage, singing, acting, and dancing throughout her school years. She spent the better part of her twenties performin in rock, jazz, and blues bands, as well as cabaret and burlesque productions. In 2012 she discovered the world of swing dancing and blues dancing, and spent countless hours absorbing from the dance floor golden-age swing and blues records as well as live music by the top swing and blues bands of Europe. </p>
+<p>Since moving to Prague in 2015, Mikey has been established as a local vocalist in many groups and venues in the city. Together with Jan Kořínek, world-class Czech Hammond organ player and band leader, they founded The Organ Grinders, a project focused on bridging the gaps between jazz and blues music, and on delivering dancer-friendly tributes of the songs that Mikey got to know and love as a dancer.</p>
+<p>In October 2016, Mikey released her debut album, 'Swing Out the Blues', co-produced and arranged by Jan Kořínek, featuring swung-up tributes to classic blues tunes and bluesed-up tributes to old fashioned swing tunes. The album was recorded and released under the label Blacktown Records.</p>
 <p>In November 2016, Mikey performed at the semi-annual Stan the Man Blues Night in Dresden, Germany, alongside bluesman Lorenzo Thompson from Chicago. In December 2016, she opened for blues diva Sharon Lewis from Chicago in a year-end revue concert in Prague.</p>
 <p>Nowadays, Mikey is a resident musician at U Maleho Glena, Reduta Jazz Club, and Jazz Dock in Prague, as well as at Evergreen Pub in Dresden, Germany. She collaborates regularly with the Ray Charles Tribute Orchestra and Famous Swing Melodies projects, led by Jakub Zomer, and with AppenDixie, led by Petr Seghman.</p>
             </div>
@@ -119,7 +115,7 @@
                     <h2>Music</h2>
                     <a href="https://missmikeymay.bandcamp.com/" class="btn btn-default btn-lg">Buy the album on Bandcamp</a>
                     <p>   </p>
-                        <p align="center"><iframe style="position: relative; border: 1; width: 350px; height: 786px;" src="https://bandcamp.com/EmbeddedPlayer/album=2572896376/size=large/bgcol=333333/linkcol=e99708/artwork=big/transparent=true/" seamless><a href="http://missmikeymay.bandcamp.com/album/swing-out-the-blues">Swing Out the Blues by Miss Mikey May and Jan Kořínek with The Organ Grinders</a></iframe></p>
+                        <div class="music-container"><iframe style="border: 0; width: 700px; height: 1136px;" src="https://bandcamp.com/EmbeddedPlayer/album=2572896376/size=large/bgcol=333333/linkcol=e99708/transparent=true/" seamless><a href="http://missmikeymay.bandcamp.com/album/swing-out-the-blues">Swing Out the Blues by Miss Mikey May and Jan Kořínek with The Organ Grinders</a></iframe></div>
                 </div>
             </div>
         </div>
