--- a/index.html
+++ b/index.html
@@ -98,11 +98,9 @@
             <div class="col-lg-8 col-lg-offset-2">
                 <h2>About</h2>
                 <p>Miss Mikey May is an Israeli-American blues and jazz singer, based in Prague, Czech Republic. Her powerful and soulful vocals are inspired by the great jazz and blues divas and deliver a one-two punch of musicality and emotion that radiates on and off the stage.</p>
-                <p>Mikey grew up on the stage, singing, acting, and dancing throughout her school years. She spent the better part of her twenties performin in rock, jazz, and blues bands, as well as cabaret and burlesque productions. In 2012 she discovered the world of swing dancing and blues dancing, and spent countless hours absorbing from the dance floor golden-age swing and blues records as well as live music by the top swing and blues bands of Europe. </p>
-<p>Since moving to Prague in 2015, Mikey has been established as a local vocalist in many groups and venues in the city. Together with Jan Kořínek, world-class Czech Hammond organ player and band leader, they founded The Organ Grinders, a project focused on bridging the gaps between jazz and blues music, and on delivering dancer-friendly tributes of the songs that Mikey got to know and love as a dancer.</p>
-<p>In October 2016, Mikey released her debut album, 'Swing Out the Blues', co-produced and arranged by Jan Kořínek, featuring swung-up tributes to classic blues tunes and bluesed-up tributes to old fashioned swing tunes. The album was recorded and released under the label Blacktown Records.</p>
-<p>In November 2016, Mikey performed at the semi-annual Stan the Man Blues Night in Dresden, Germany, alongside bluesman Lorenzo Thompson from Chicago. In December 2016, she opened for blues diva Sharon Lewis from Chicago in a year-end revue concert in Prague.</p>
-<p>Nowadays, Mikey is a resident musician at U Maleho Glena, Reduta Jazz Club, and Jazz Dock in Prague, as well as at Evergreen Pub in Dresden, Germany. She collaborates regularly with the Ray Charles Tribute Orchestra and Famous Swing Melodies projects, led by Jakub Zomer, and with AppenDixie, led by Petr Seghman.</p>
+                <p>Mikey grew up on the stage, singing, acting, and dancing throughout her school years. She spent the better part of her twenties performing in rock, jazz, and blues bands, as well as cabaret and burlesque productions. In 2012 she joined the global swing and blues dance communities, traveling and dancing throughout Europe to live swing and blues music. </p>
+                <p>In early 2016, The Organ Grinders project was born from her collaboration with Jan Kořínek, world-class Czech Hammond organ player and band leader. In October 2016, they released the project's debut album, 'Swing Out the Blues', featuring swinging-blues tributes to classic tunes.</p>
+                <p>Nowadays, Mikey is a resident musician at U Maleho Glena, Reduta Jazz Club, and Jazz Dock in Prague, as well as at Evergreen Pub in Dresden, Germany. She also collaborates regularly with the Ray Charles Tribute Orchestra, led by Jakub Zomer, and with AppenDixie, led by Petr Seghman.</p>
             </div>
         </div>
     </section>
@@ -115,7 +113,7 @@
                     <h2>Music</h2>
                     <a href="https://missmikeymay.bandcamp.com/" class="btn btn-default btn-lg">Buy the album on Bandcamp</a>
                     <p>   </p>
-                        <div class="music-container"><iframe style="border: 0; width: 700px; height: 1136px;" src="https://bandcamp.com/EmbeddedPlayer/album=2572896376/size=large/bgcol=333333/linkcol=e99708/transparent=true/" seamless><a href="http://missmikeymay.bandcamp.com/album/swing-out-the-blues">Swing Out the Blues by Miss Mikey May and Jan Kořínek with The Organ Grinders</a></iframe></div>
+                        <div class="music-container"><iframe style="border: 1; width: 700px; height: 1136px;" src="https://bandcamp.com/EmbeddedPlayer/album=2572896376/size=large/bgcol=333333/linkcol=e99708/transparent=true/" seamless><a href="http://missmikeymay.bandcamp.com/album/swing-out-the-blues">Swing Out the Blues by Miss Mikey May and Jan Kořínek with The Organ Grinders</a></iframe></div>
                 </div>
             </div>
         </div>
