--- a/index.html
+++ b/index.html
@@ -124,9 +124,9 @@
         <div class="container">
             <div class="col-lg-8 col-lg-offset-2">
                 <h2>Videos</h2>
-                <div class="video-container"><iframe width="560" height="315" src="https://www.youtube.com/embed/FmL9Cf9Zbs4?rel=0" frameborder="1" allowfullscreen></iframe></div>
+                <style>.embed-container { position: relative; padding-bottom: 56.25%; height: 0; overflow: hidden; max-width: 100%; } .embed-container iframe, .embed-container object, .embed-container embed { position: absolute; top: 0; left: 0; width: 100%; height: 100%; }</style><div class='embed-container'><iframe src='https://www.youtube.com/embed/FmL9Cf9Zbs4' frameborder='1' allowfullscreen></iframe></div>                
                 <p> </p>
-                <div class="video-container"><iframe width="560" height="315" src="https://www.youtube.com/embed/LQBcaGpyKlI?rel=0" frameborder="1" allowfullscreen></iframe></div>
+                <style>.embed-container { position: relative; padding-bottom: 56.25%; height: 0; overflow: hidden; max-width: 100%; } .embed-container iframe, .embed-container object, .embed-container embed { position: absolute; top: 0; left: 0; width: 100%; height: 100%; }</style><div class='embed-container'><iframe src='https://www.youtube.com/embed/LQBcaGpyKlI' frameborder='1' allowfullscreen></iframe></div>
             </div>
         </div>
     </section>
