--- a/index.html
+++ b/index.html
@@ -104,8 +104,8 @@
     </section>
 
     <!-- Bandcamp Section -->
-    <section id="music" class="content-section text-center">
-        <div class="content-section">
+    <section id="music" class="widget-section text-center">
+        <div class="widget-section">
             <div class="container">
                 <div class="col-lg-8 col-lg-offset-2">
                     <h2>Music</h2>
