--- a/index.html
+++ b/index.html
@@ -95,7 +95,7 @@
     <!-- About Section -->
     <section id="about" class="container-fluid content-section text-center">
         <div class="row">
-            <div class="col-lg-8 centered">
+            <div class="col-lg-8 col-lg-offset-2">
                 <h1>About</h1>
                 <p>Miss Mikey May is an Israeli-American blues and jazz singer, based in Prague, Czech Republic. Her powerful and soulful vocals are inspired by the great jazz and blues divas and deliver a one-two punch of musicality and emotion that radiates on and off the stage.</p>
                 <p>Mikey grew up on the stage, singing, acting, and dancing throughout her school years. She spent the better part of her twenties performing in rock, jazz, and blues bands, as well as cabaret and burlesque productions. In 2012 she joined the global swing and blues dance communities, traveling and dancing throughout Europe to live swing and blues music. </p>
@@ -106,14 +106,14 @@
     </section>
 
     <!-- Bandcamp Section -->
-    <section id="music" class="widget-section text-center">
-        <div class="widget-section">
+    <section id="music" class="content-section text-center">
+        <div class="content-section">
             <div class="container">
                 <div class="col-lg-8 col-lg-offset-2">
                     <h2>Music</h2>
                     <a href="https://missmikeymay.bandcamp.com/" class="btn btn-default btn-lg">Buy the album on Bandcamp</a>
                     <p>   </p>
-                        <div class="music-container"><iframe style="border: 1; width: 700px; height: 1136px;" src="https://bandcamp.com/EmbeddedPlayer/album=2572896376/size=large/bgcol=333333/linkcol=e99708/transparent=true/" seamless><a href="http://missmikeymay.bandcamp.com/album/swing-out-the-blues">Swing Out the Blues by Miss Mikey May and Jan Kořínek with The Organ Grinders</a></iframe></div>
+                    <iframe style="border: 1; width: 100%; height: 42px;" src="https://bandcamp.com/EmbeddedPlayer/album=2572896376/size=small/bgcol=333333/linkcol=e99708/transparent=true/" seamless><a href="http://missmikeymay.bandcamp.com/album/swing-out-the-blues">Swing Out the Blues by Miss Mikey May and Jan Kořínek with The Organ Grinders</a></iframe>
                 </div>
             </div>
         </div>
