--- a/index.html
+++ b/index.html
@@ -96,7 +96,7 @@
     <section id="about" class="container-fluid content-section text-center">
         <div class="row">
             <div class="col-lg-8 col-lg-offset-2">
-                <h1>About</h1>
+                <h2>About</h2>
                 <p>Miss Mikey May is an Israeli-American blues and jazz singer, based in Prague, Czech Republic. Her powerful and soulful vocals are inspired by the great jazz and blues divas and deliver a one-two punch of musicality and emotion that radiates on and off the stage.</p>
                 <p>Mikey grew up on the stage, singing, acting, and dancing throughout her school years. She spent the better part of her twenties performing in rock, jazz, and blues bands, as well as cabaret and burlesque productions. In 2012 she joined the global swing and blues dance communities, traveling and dancing throughout Europe to live swing and blues music. </p>
                 <p>In early 2016, The Organ Grinders project was born from her collaboration with Jan Kořínek, world-class Czech Hammond organ player and band leader. In October 2016, they released the project's debut album, 'Swing Out the Blues', featuring swinging-blues tributes to classic tunes.</p>
@@ -113,8 +113,7 @@
                     <h2>Music</h2>
                     <a href="https://missmikeymay.bandcamp.com/" class="btn btn-default btn-lg">Buy the album on Bandcamp</a>
                     <p>   </p>
-                    <iframe style="border: 1; width: 100%; height: 42px;" src="https://bandcamp.com/EmbeddedPlayer/album=2572896376/size=small/bgcol=333333/linkcol=e99708/transparent=true/" seamless><a href="http://missmikeymay.bandcamp.com/album/swing-out-the-blues">Swing Out the Blues by Miss Mikey May and Jan Kořínek with The Organ Grinders</a></iframe>
-                </div>
+                    <iframe style="border: 1; width: 350px; height: 786px;" src="https://bandcamp.com/EmbeddedPlayer/album=2572896376/size=large/bgcol=333333/linkcol=e99708/transparent=true/" seamless><a href="http://missmikeymay.bandcamp.com/album/swing-out-the-blues">Swing Out the Blues by Miss Mikey May and Jan Kořínek with The Organ Grinders</a></iframe>                </div>
             </div>
         </div>
     </section>
@@ -124,9 +123,12 @@
         <div class="container">
             <div class="col-lg-8 col-lg-offset-2">
                 <h2>Videos</h2>
-                <style>.embed-container { position: relative; padding-bottom: 56.25%; height: 0; overflow: hidden; max-width: 100%; } .embed-container iframe, .embed-container object, .embed-container embed { position: absolute; top: 0; left: 0; width: 100%; height: 100%; }</style><div class='embed-container'><iframe src='https://www.youtube.com/embed/FmL9Cf9Zbs4' frameborder='1' allowfullscreen></iframe></div>                
+                <div class="video-container">
+                    <iframe width="640" height="360" src="https://www.youtube.com/embed/FmL9Cf9Zbs4?rel=0" frameborder="1" allowfullscreen></iframe>
+                </div>
                 <p> </p>
-                <style>.embed-container { position: relative; padding-bottom: 56.25%; height: 0; overflow: hidden; max-width: 100%; } .embed-container iframe, .embed-container object, .embed-container embed { position: absolute; top: 0; left: 0; width: 100%; height: 100%; }</style><div class='embed-container'><iframe src='https://www.youtube.com/embed/LQBcaGpyKlI' frameborder='1' allowfullscreen></iframe></div>
+                <div class="video-container">
+                    <iframe width="640" height="360" src="https://www.youtube.com/embed/LQBcaGpyKlI?rel=0" frameborder="1" allowfullscreen></iframe>            </div>
             </div>
         </div>
     </section>
