--- a/index.html
+++ b/index.html
@@ -119,7 +119,7 @@
     </section>
 
     <!-- YouTube Section -->
-    <section id="videos" class="container content-section text-center">
+    <section id="videos" class="container-fluid content-section text-center">
         <div class="container">
             <div class="col-lg-8 col-lg-offset-2">
                 <h2>Videos</h2>
@@ -138,9 +138,8 @@
         <div class="content-section">
             <div class="container">
                 <div class="col-lg-8 col-lg-offset-2">
-                    <h2>Upcoming Shows</h2>
-                    <iframe src="https://www.facebook.com/plugins/page.php?href=https%3A%2F%2Fwww.facebook.com%2FMissMikeyMaySings%2F&tabs=events&width=350&height=500&small_header=true&adapt_container_width=true&hide_cover=false&show_facepile=false&appId" width="350" height="500" style="border:none;overflow:hidden" scrolling="no" frameborder="0" allowTransparency="true"></iframe>
-                </div>
+                    <h2 text-transform="uppercase">Upcoming Shows</h2>
+                    <iframe src="https://www.facebook.com/plugins/page.php?href=https%3A%2F%2Fwww.facebook.com%2FMissMikeyMaySings%2F&tabs=events&width=340&height=500&small_header=true&adapt_container_width=true&hide_cover=false&show_facepile=false&appId" width="340" height="500" style="border:none;overflow:hidden" scrolling="no" frameborder="1" allowTransparency="true"></iframe>                </div>
             </div>
         </div>
     </section>
