--- a/index.html
+++ b/index.html
@@ -169,7 +169,7 @@
 
     <!-- Footer -->
     <footer>
-        <div class="container text-center">
+        <div class="container text-center" width=100% height=100%>
             <p>Copyright &copy; Miss Mikey May 2017</p>
             <p>This website was built with Jekyll and published with GitHub Pages.</p>
             <p>Theme based on the awesome open-source folks at <a href="https://startbootstrap.com/template-overviews/grayscale/">Start Bootstrap Grayscale</a>.
