--- a/index.html
+++ b/index.html
@@ -138,7 +138,7 @@
         <div class="content-section">
             <div class="container">
                 <div class="col-lg-8 col-lg-offset-2">
-                    <h2 text-transform="uppercase">Upcoming Shows</h2>
+                    <h2>Upcoming Shows</h2>
                     <iframe src="https://www.facebook.com/plugins/page.php?href=https%3A%2F%2Fwww.facebook.com%2FMissMikeyMaySings%2F&tabs=events&width=340&height=500&small_header=true&adapt_container_width=true&hide_cover=false&show_facepile=false&appId" width="340" height="500" style="border:none;overflow:hidden" scrolling="no" frameborder="1" allowTransparency="true"></iframe>                </div>
             </div>
         </div>
@@ -169,7 +169,7 @@
 
     <!-- Footer -->
     <footer>
-        <div class="container text-center" width=100% height=100%>
+        <div class="container text-center">
             <p>Copyright &copy; Miss Mikey May 2017</p>
             <p>This website was built with Jekyll and published with GitHub Pages.</p>
             <p>Theme based on the awesome open-source folks at <a href="https://startbootstrap.com/template-overviews/grayscale/">Start Bootstrap Grayscale</a>.
