--- a/index.html
+++ b/index.html
@@ -16,6 +16,7 @@
 
     <!-- Custom Fonts -->
     <link href="https://fonts.googleapis.com/css?family=Mr+Dafoe|Ruthie|Tangerine" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css?family=Alex+Brush|Parisienne" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css?family=Bigshot+One|Maiden+Orange|Overlock+SC|Patua+One|Rakkas" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css?family=Andada|Bitter|Maitree|Roboto+Slab|Scope+One|Tinos|Vollkorn" rel="stylesheet">
     
