--- a/index.html
+++ b/index.html
@@ -124,12 +124,18 @@
         <div class="container">
             <div class="col-lg-8 col-lg-offset-2">
                 <h2>Videos</h2>
+                <div class="row">
+                    <div class="col-lg-6">
                 <div class="video-container">
                     <iframe width="640" height="360" src="https://www.youtube.com/embed/FmL9Cf9Zbs4?rel=0" frameborder="1" allowfullscreen></iframe>
-                </div>
+                        </div>
+                    </div>
                 <p> </p>
-                <div class="video-container">
+                <div class="col-lg-6">
+                    <div class="video-container">
                     <iframe width="640" height="360" src="https://www.youtube.com/embed/LQBcaGpyKlI?rel=0" frameborder="1" allowfullscreen></iframe>            </div>
+                    </div>
+                </div>
             </div>
         </div>
     </section>
