--- a/index.html
+++ b/index.html
@@ -151,14 +151,11 @@
     </section>
     
     <!-- Photo Gallery Section -->
-    <div class="container">
-
+    <div class="container content-section text-center">
         <div class="row">
-
             <div class="col-lg-12">
                 <h2 class="page-header">Photos</h2>
             </div>
-
             <div class="col-lg-3 col-md-4 col-xs-6 thumb">
                 <a class="thumbnail" href="#">
                     <img class="img-responsive" src="http://placehold.it/400x300" alt="">
