--- a/index.html
+++ b/index.html
@@ -151,10 +151,11 @@
     </section>
     
     <!-- Photo Gallery Section -->
-    <div class="container content-section text-center">
+    <section id="photos" class="content-section text-center">
+        <div class="container">
         <div class="row">
             <div class="col-lg-12">
-                <h2 class="page-header">Photos</h2>
+                <h2 class="page-header">Photo Gallery</h2>
             </div>
             <div class="col-lg-3 col-md-4 col-xs-6 thumb">
                 <a class="thumbnail" href="#">
@@ -215,9 +216,11 @@
                 <a class="thumbnail" href="#">
                     <img class="img-responsive" src="http://placehold.it/400x300" alt="">
                 </a>
+            </div>
             </div>
         </div>
-
+    </section>
+    
     <!-- Contact Section -->
     <section id="contact" class="container content-section text-center">
         <div class="row">
