--- a/index.html
+++ b/index.html
@@ -122,7 +122,7 @@
     <!-- YouTube Section -->
     <section id="videos" class="container-fluid content-section text-center">
         <div class="container">
-            <div class="col-lg-8 col-lg-offset-2">
+            <div class="col-lg-12">
                 <h2>Videos</h2>
                 <div class="row">
                     <div class="col-lg-6">
@@ -139,6 +139,26 @@
         </div>
     </section>
 
+    <!-- Flickr Section -->
+    <section id="pictures" class="container-fluid content-section text-center">
+        <div class="container">
+            <div class="col-lg-8 col-lg-offset-2">
+                <h2>Videos</h2>
+                <div class="row">
+                    <div class="col-lg-6">
+                <div class="video-container">
+                    <iframe width="640" height="360" src="https://www.youtube.com/embed/FmL9Cf9Zbs4?rel=0" frameborder="1" allowfullscreen></iframe>
+                        </div>
+                    </div>
+                <div class="col-lg-6">
+                    <div class="video-container">
+                    <iframe width="640" height="360" src="https://www.youtube.com/embed/LQBcaGpyKlI?rel=0" frameborder="1" allowfullscreen></iframe>            </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </section>
+    
     <!-- Events Section -->
     <section id="shows" class="content-section text-center">
         <div class="content-section">
