--- a/index.html
+++ b/index.html
@@ -146,8 +146,7 @@
                 <h2>Videos</h2>
                 <div class="row">
                     <div class="col-lg-6">
-                <div class="video-container">
-                    <iframe width="640" height="360" src="https://www.youtube.com/embed/FmL9Cf9Zbs4?rel=0" frameborder="1" allowfullscreen></iframe>
+                     <a data-flickr-embed="true" data-header="true" data-footer="true"  href="https://www.flickr.com/gp/146482844@N05/01yZ7L" title="Jan Korinek Soultet Swings! with Miss Mikey May"><img src="https://c1.staticflickr.com/1/284/31346401704_7812f41081_z.jpg" width="640" height="414" alt="Jan Korinek Soultet Swings! with Miss Mikey May"></a><script async src="//embedr.flickr.com/assets/client-code.js" charset="utf-8"></script>
                         </div>
                     </div>
                 <div class="col-lg-6">
