--- a/index.html
+++ b/index.html
@@ -140,13 +140,14 @@
     </section>
 
     <!-- Flickr Section -->
-    <section id="pictures" class="container content-section text-center">
+    <section id="pictures" class="container-fluid content-section text-center">
         <div class="container">
             <div class="col-lg-12">
                 <h2>Pictures</h2>
                 <div class="row">
                     <div class="col-lg-6">
-                    <a data-flickr-embed="true"  href="https://www.flickr.com/photos/146482844@N05/albums/72157675111386894" title="Jan Korinek Soultet Swings! with Miss Mikey May"><img src="https://c1.staticflickr.com/1/284/31346401704_7812f41081.jpg" width="500" height="323" alt="Jan Korinek Soultet Swings! with Miss Mikey May"></a><script async src="//embedr.flickr.com/assets/client-code.js" charset="utf-8"></script>                    </div>
+                    <a data-flickr-embed="true"  href="https://www.flickr.com/photos/146482844@N05/albums/72157675111386894" title="Jan Korinek Soultet Swings! with Miss Mikey May"><img src="https://c1.staticflickr.com/1/284/31346401704_7812f41081.jpg" width="500" height="323" alt="Jan Korinek Soultet Swings! with Miss Mikey May"></a><script async src="//embedr.flickr.com/assets/client-code.js" charset="utf-8"></script>                    
+                    </div>
                     <div class="col-lg-6">
                     <a data-flickr-embed="true" data-context="true"  href="https://www.flickr.com/photos/146482844@N05/31346401704/in/album-72157675111386894/" title="1-1"><img src="https://c1.staticflickr.com/1/284/31346401704_7812f41081.jpg" width="500" height="323" alt="1-1"></a><script async src="//embedr.flickr.com/assets/client-code.js" charset="utf-8"></script>                    </div>
                 </div>
