--- a/index.html
+++ b/index.html
@@ -146,9 +146,13 @@
                 <h2>Pictures</h2>
                 <div class="row">
                     <div class="col-lg-6">
-                    <a data-flickr-embed="true" data-header="true" data-footer="true" frame-border="1" href="https://www.flickr.com/photos/missmikeymay/albums/72157675111386894" title="Soultet Swings! at Jazz Dock 26-07-16"><img src="https://c1.staticflickr.com/1/284/31346401704_7812f41081.jpg" width="500" height="323" alt="Soultet Swings! at Jazz Dock 26-07-16"></a><script async src="//embedr.flickr.com/assets/client-code.js" charset="utf-8"></script>                    </div>
+                        <h3>Soultet Swings! 26-07-16</h3>
+                        <a data-flickr-embed="true" data-header="true" data-context="true"  href="https://www.flickr.com/photos/missmikeymay/31812828730/in/album-72157675111386894/" title="14-1"><img src="https://c3.staticflickr.com/1/483/31812828730_a67ab6f80b.jpg" width="500" height="342" alt="14-1"></a><script async src="//embedr.flickr.com/assets/client-code.js" charset="utf-8"></script>
+                    </div> 
                     <div class="col-lg-6">
-                    <a data-flickr-embed="true" data-context="true"  href="https://www.flickr.com/photos/146482844@N05/31346401704/in/album-72157675111386894/" title="1-1"><img src="https://c1.staticflickr.com/1/284/31346401704_7812f41081.jpg" width="500" height="323" alt="1-1"></a><script async src="//embedr.flickr.com/assets/client-code.js" charset="utf-8"></script>                    </div>
+                        <h3>CD Release Party 14-10-16</h3>
+                        <a data-flickr-embed="true" data-header="true" data-context="true"  href="https://www.flickr.com/photos/missmikeymay/31812828730/in/album-72157675111386894/" title="14-1"><img src="https://c3.staticflickr.com/1/483/31812828730_a67ab6f80b.jpg" width="500" height="342" alt="14-1"></a><script async src="//embedr.flickr.com/assets/client-code.js" charset="utf-8"></script>
+                        </div>
                 </div>
             </div>
         </div>
