--- a/index.html
+++ b/index.html
@@ -146,13 +146,11 @@
                 <h2>Pictures</h2>
                 <div class="row">
                     <div class="col-lg-6">
-                        <h3>Soultet Swings! 26-07-16</h3>
-                        <a data-flickr-embed="true" data-header="true" data-context="true"  href="https://www.flickr.com/photos/missmikeymay/31812828730/in/album-72157675111386894/" title="14-1"><img src="https://c3.staticflickr.com/1/483/31812828730_a67ab6f80b.jpg" width="500" height="342" alt="14-1"></a><script async src="//embedr.flickr.com/assets/client-code.js" charset="utf-8"></script>
-                    </div> 
+                        <p>Soultet Swings! 26-07-16</p>
+                        <a data-flickr-embed="true" data-context="true"  href="https://www.flickr.com/photos/missmikeymay/31812828730/in/album-72157675111386894/" title="14-1"><img src="https://c3.staticflickr.com/1/483/31812828730_a67ab6f80b.jpg" width="500" height="342" alt="14-1"></a><script async src="//embedr.flickr.com/assets/client-code.js" charset="utf-8"></script>                    </div> 
                     <div class="col-lg-6">
-                        <h3>CD Release Party 14-10-16</h3>
-                        <a data-flickr-embed="true" data-header="true" data-context="true"  href="https://www.flickr.com/photos/missmikeymay/31812828730/in/album-72157675111386894/" title="14-1"><img src="https://c3.staticflickr.com/1/483/31812828730_a67ab6f80b.jpg" width="500" height="342" alt="14-1"></a><script async src="//embedr.flickr.com/assets/client-code.js" charset="utf-8"></script>
-                        </div>
+                        <p>CD Release Party 14-10-16</p>
+                        <a data-flickr-embed="true" data-context="true"  href="https://www.flickr.com/photos/missmikeymay/31812828730/in/album-72157675111386894/" title="14-1"><img src="https://c3.staticflickr.com/1/483/31812828730_a67ab6f80b.jpg" width="500" height="342" alt="14-1"></a><script async src="//embedr.flickr.com/assets/client-code.js" charset="utf-8"></script>                        </div>
                 </div>
             </div>
         </div>
