--- a/index.html
+++ b/index.html
@@ -145,13 +145,39 @@
             <div class="col-lg-12">
                 <h2>Pictures</h2>
                 <div class="row">
-                    <div class="col-lg-6">
-                        <p>Soultet Swings! 26-07-16</p>
-                        <a data-flickr-embed="true" data-context="true"  href="https://www.flickr.com/photos/missmikeymay/31812828730/in/album-72157675111386894/" title="14-1"><img src="https://c3.staticflickr.com/1/483/31812828730_a67ab6f80b.jpg" width="500" height="342" alt="14-1"></a><script async src="//embedr.flickr.com/assets/client-code.js" charset="utf-8"></script>                    </div> 
-                    <div class="col-lg-6">
-                        <p>CD Release Party 14-10-16</p>
-                        <a data-flickr-embed="true" data-context="true"  href="https://www.flickr.com/photos/missmikeymay/31812828730/in/album-72157675111386894/" title="14-1"><img src="https://c3.staticflickr.com/1/483/31812828730_a67ab6f80b.jpg" width="500" height="342" alt="14-1"></a><script async src="//embedr.flickr.com/assets/client-code.js" charset="utf-8"></script>                        </div>
+                    <div class="col-lg-4">
+                        <h4>Jan Korinek Soultet Swings!</h4>
+                        <p>Prague, CZ</p>
+                        <p>26-07-16</p>
+                        <a data-flickr-embed="true" data-context="true"  href="https://www.flickr.com/photos/missmikeymay/31812828730/in/album-72157675111386894/" title="14-1"><img src="https://c3.staticflickr.com/1/483/31812828730_a67ab6f80b.jpg" width="500" height="342" alt="14-1"></a><script async src="//embedr.flickr.com/assets/client-code.js" charset="utf-8"></script>                    
+                    </div> 
+                    <div class="col-lg-4">
+                        <h4>'Swing Out the Blues' CD Release Party</h4>
+                        <p>Prague, CZ</p>
+                        <p>14-10-16</p>
+                        <a data-flickr-embed="true" data-context="true"  href="https://www.flickr.com/photos/missmikeymay/31812828730/in/album-72157675111386894/" title="14-1"><img src="https://c3.staticflickr.com/1/483/31812828730_a67ab6f80b.jpg" width="500" height="342" alt="14-1"></a><script async src="//embedr.flickr.com/assets/client-code.js" charset="utf-8"></script>                        
+                    </div>
                 </div>
+                    <div class="col-lg-4">
+                        <h4>The Organ Grinders at Evergreen</h4>
+                        <p>Dresden, DE</p>
+                        <p>21-10-16</p>
+                        <a data-flickr-embed="true" data-context="true"  href="https://www.flickr.com/photos/missmikeymay/31812828730/in/album-72157675111386894/" title="14-1"><img src="https://c3.staticflickr.com/1/483/31812828730_a67ab6f80b.jpg" width="500" height="342" alt="14-1"></a><script async src="//embedr.flickr.com/assets/client-code.js" charset="utf-8"></script>                        
+                    </div>
+                </div>
+                <div class="row">
+                    <div class="col-lg-4">
+                        <p>Soultet Swings! 26-07-16</p>
+                        <a data-flickr-embed="true" data-context="true"  href="https://www.flickr.com/photos/missmikeymay/31812828730/in/album-72157675111386894/" title="14-1"><img src="https://c3.staticflickr.com/1/483/31812828730_a67ab6f80b.jpg" width="500" height="342" alt="14-1"></a><script async src="//embedr.flickr.com/assets/client-code.js" charset="utf-8"></script>                    
+                    </div> 
+                    <div class="col-lg-4">
+                        <p>CD Release Party 14-10-16</p>
+                        <a data-flickr-embed="true" data-context="true"  href="https://www.flickr.com/photos/missmikeymay/31812828730/in/album-72157675111386894/" title="14-1"><img src="https://c3.staticflickr.com/1/483/31812828730_a67ab6f80b.jpg" width="500" height="342" alt="14-1"></a><script async src="//embedr.flickr.com/assets/client-code.js" charset="utf-8"></script>                        
+                    </div>
+                </div>
+                    <div class="col-lg-4">
+                        <p>CD Release Party 14-10-16</p>
+                        <a data-flickr-embed="true" data-context="true"  href="https://www.flickr.com/photos/missmikeymay/31812828730/in/album-72157675111386894/" title="14-1"><img src="https://c3.staticflickr.com/1/483/31812828730_a67ab6f80b.jpg" width="500" height="342" alt="14-1"></a><script async src="//embedr.flickr.com/assets/client-code.js" charset="utf-8"></script>                        
             </div>
         </div>
     </section>
