--- a/index.html
+++ b/index.html
@@ -157,7 +157,7 @@
                         <p>'Swing Out the Blues' CD Release Party</p>
                         <p>Prague, CZ</p>
                         <p>14-10-16</p>
-                        <a data-flickr-embed="true" data-context="true"  href="https://www.flickr.com/photos/missmikeymay/31812828730/in/album-72157675111386894/" title="14-1"><img src="https://c3.staticflickr.com/1/483/31812828730_a67ab6f80b.jpg" width="500" height="342" alt="14-1"></a><script async src="//embedr.flickr.com/assets/client-code.js" charset="utf-8"></script>                        
+                        <a data-flickr-embed="true" data-context="true"  href="https://www.flickr.com/photos/missmikeymay/32071043921/in/album-72157677216679351/" title="DSC_5466"><img src="https://c2.staticflickr.com/1/721/32071043921_a52ca2951e.jpg" width="500" height="334" alt="DSC_5466"></a><script async src="//embedr.flickr.com/assets/client-code.js" charset="utf-8"></script>
                     </div>
                 </div>
                 <div class="row">
